# rank-eval

./: .gitignore  CHANGELOG.md  COMPLETE_IMPLEMENTATION.md  Cargo.toml  EXTRACTION_SUMMARY.md  FINAL_STATUS.md  IMPROVEMENT_REVIEW.md  README.md
.cursor/rules/: eval-specific.mdc
.github/workflows/: ci.yml  e2e-published.yml  publish.yml
docs/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_STATUS.md  main.typ
hack/viz/: NDCG_VISUALIZATIONS.md  generate_ndcg_real_data.py  generate_ndcg_viz.py
rank-eval-python/: Cargo.toml  README.md  pyproject.toml  rank_eval.pyi
rank-eval-python/rank_eval/: __init__.py
rank-eval-python/src/: lib.rs
rank-eval-python/tests/: test_eval.py
src/: batch.rs  binary.rs  dataset.rs  export.rs  graded.rs  lib.rs  statistics.rs  trec.rs  validation.rs
src/dataset/: loaders.rs  statistics.rs  validator.rs
test-e2e-local/: Cargo.toml
tests/: comprehensive_workspace.rs  dataset_tests.rs  integration_e2e.rs  property_tests.rs
viz/: generate_ndcg_viz.py
