[package]
name = "test-e2e-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Simulate published dependencies
rank-eval = { path = "..", version = "0.1.0" }

# Test utilities
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "test-eval-basic"
path = "src/bin/test_eval_basic.rs"

[[bin]]
name = "test-eval-integration"
path = "src/bin/test_eval_integration.rs"

